--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mesto-react-auth",
+  "name": "react-mesto-auth",
   "version": "0.1.0",
   "homepage": "https://yaroslav-chertov.github.io/react-mesto-auth/",
   "private": true,
